[gd_scene load_steps=2 format=3 uid="uid://b5jyo8ipsljar"]

[ext_resource type="Script" uid="uid://daxpbib3ki4fy" path="res://Game/Scripts/settings_menu.gd" id="1_s2k3p"]

[node name="SettingsMenu" type="Window"]
title = "Settings"
initial_position = 1
size = Vector2i(400, 300)
transient = true
exclusive = true
script = ExtResource("1_s2k3p")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="AudioSettings" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/AudioSettings"]
layout_mode = 2
text = "Master Volume"

[node name="MasterVolume" type="HSlider" parent="MarginContainer/VBoxContainer/AudioSettings"]
layout_mode = 2
max_value = 1.0
step = 0.05
value = 1.0

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/AudioSettings"]
layout_mode = 2
text = "Music Volume"

[node name="MusicVolume" type="HSlider" parent="MarginContainer/VBoxContainer/AudioSettings"]
layout_mode = 2
max_value = 1.0
step = 0.05
value = 0.8

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/AudioSettings"]
layout_mode = 2
text = "SFX Volume"

[node name="SFXVolume" type="HSlider" parent="MarginContainer/VBoxContainer/AudioSettings"]
layout_mode = 2
max_value = 1.0
step = 0.05
value = 1.0

[node name="GameSettings" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ScreenShake" type="CheckButton" parent="MarginContainer/VBoxContainer/GameSettings"]
layout_mode = 2
button_pressed = true
text = "Screen Shake"

[node name="ShowDamageNumbers" type="CheckButton" parent="MarginContainer/VBoxContainer/GameSettings"]
layout_mode = 2
button_pressed = true
text = "Show Damage Numbers"

[node name="Buttons" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
alignment = 1

[node name="ApplyButton" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
text = "Apply"

[node name="MainMenuButton" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
text = "Main Menu"

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
text = "Close"
